03_liskov_substitution_principle/src/com/talevski/viktor/example/good/Bicycle.java
package com.talevski.viktor.example.good;

public class Bicycle extends TransportationDeviceWithoutEngine {
}
