03_liskov_substitution_principle/src/com/talevski/viktor/example/bad/Bicycle.java
package com.talevski.viktor.example.bad;

public class Bicycle extends TransportationDevice {
}
